# agent-template-repo

./: .env.example  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
app/agents/: base.py
app/agents/search_agent/: core.py  prompts.py  tools.py
app/api/v1/endpoints/: search.py
app/core/: config.py
docs/source/: agents_docs.rst  api_docs.rst  conf.py  index.rst  quickstart.rst
