[project]
name = "agent-template-repo"
version = "0.1.0"
description = "This is a template repository which can be used to set up future agent projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.4.3",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.97.1",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.27.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "langgraph>=0.5.4",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.7",
    "yapf>=0.43.0",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
all = [
    "agent-template-repo[dev]",
    "agent-template-repo[docs]",
]
